# rosbags-dataset-parser

./: README.md  pyproject.toml
docs/: data_creation.md  data_processing.md  reqs.md
src/rosbags_parser/: __init__.py  cli.py  dataset_loader.py  run_loader.py
tests/: test_data_loader.py
